--- a/Portfolio/css/stylesheet.css
+++ b/Portfolio/css/stylesheet.css
@@ -15,6 +15,11 @@
 		display: block;
 	}
 
+/* Rule to adjust corners on image */
+	.primary-content img {
+		border-radius: 10px;
+	}
+
 /* Links stylesheet to all webpages */
 <head>
 	<meta charset="UTF-8">
