--- a/Portfolio/css/stylesheet.css
+++ b/Portfolio/css/stylesheet.css
@@ -49,7 +49,7 @@ OA	a:hover {color:#c50485;
 	}
 /* High Contrast for Readability */
 	
-	body {background-color: #b7b7b7;
+	body {background-color: #aeaeae;
 			color: #0e0909;
 
 /* General styles for all screen sizes */
@@ -69,19 +69,19 @@ OA	a:hover {color:#c50485;
 /* Styles for secondary content */
 		.secondary-content {
 			font-style: italic;
-			color: #979696;
+			color: #aeaeae;
 		}
 
 	/*Styles for header, nav, main, and footer */
 
 header {
-	background-color: #b7b7b7;
+	background-color: #aeaeae;
 	color: #333;
 	}
 
 nav {	
-	background-color:#a1a0a0;
-	color: #fff;
+	background-color:#807e7e;
+	color: #ada3a3;
 	padding: 10px;
 	}
 main {
